--- a/new.html
+++ b/new.html
@@ -74,8 +74,10 @@
 
         <div class="social-icons">
           <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-          <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://github.com/rawidya"><i class="fa-brands fa-github"></i></a>
+          <a href="mailto:paramawidyaputraarif@gmail.comsubject=Hello%20Rama&body=I%20want%20to%20hire%20you!" target="_blank">
+            <i class="fas fa-envelope"></i>
+          </a>          
           <a href="https://www.instagram.com/rawidyadhana/"><i class="fa-brands fa-instagram"></i></a>
         </div>
 
