--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <section class="home" id="home">
       <div class="home-img">
-        <img src="ASSETS/8cd134e8-6cd8-4ca8-b56f-f5c327efdc69.jpg" alt="Profile Photo">
+        <img src="./ASSETS/8cd134e8-6cd8-4ca8-b56f-f5c327efdc69.jpg" alt="Profile Photo">
       </div>
 
       <div class="home-content">
